Support dimensions in the search result